# vicuna2_unit_testing

./: .gitignore  .gitmodules  README.md
CMake/: GCC_toolchain.cmake  add_test.cmake  llvm_18_toolchain.cmake  run_legacy_test.cmake  run_spike_comparison.cmake  run_test.cmake
bsp/: CMakeLists.txt  lld_link.ld
bsp/lib/: terminate_benchmark.c  terminate_benchmark.h  vicuna_crt.h
build_model/: CMakeLists.txt  vector_config.cmake  verilator_main.cpp  verilator_main_cv32a60x.cpp  verilator_support_cv32a60x.cpp  verilator_support_cv32a60x.h  vproc_top_cv32a60x.sv  vproc_top_cv32e40x.sv
build_model/cv32a60x/: verilator_main.cpp  verilator_support_cv32a60x.cpp  verilator_support_cv32a60x.h  vproc_top.sv
build_model/cv32e40x/: verilator_main.cpp  verilator_support_cv32e40x.cpp  verilator_support_cv32e40x.h  vproc_top.sv
build_tests/: CMakeLists.txt
scripts/: build_gcc.sh  build_llvm.sh  build_verilator.sh  compare_commits.py  count_test_cases.py  download_spike.sh  setup_toolchain.sh
test_sources/: CMakeLists.txt
test_sources/legacy/: CMakeLists.txt  spill_cache.S
test_sources/legacy/alu/: vsext_16.S  vsext_8.S  vsext_vf4.S  vzext_16.S  vzext_8.S  vzext_vf4.S
test_sources/legacy/bsp/: CMakeLists.txt  crt0.S  link.ld  spill_cache.S
test_sources/legacy/bsp/spike_bsp/: crt0_Spike.S  link_spike.ld  spill_cache_Spike.S
test_sources/legacy/csr/: vxrm.S
test_sources/legacy/div/: vdiv_vv_16.S  vdiv_vv_32.S  vdiv_vv_8.S  vdiv_vx_16.S  vdiv_vx_32.S  vdiv_vx_8.S  vdivu_vv_16.S  vdivu_vv_32.S  vdivu_vv_8.S  vdivu_vx_16.S  vdivu_vx_32.S  vdivu_vx_8.S  vrem_vv_16.S  vrem_vv_32.S  vrem_vv_8.S  vrem_vx_16.S  vrem_vx_32.S  vrem_vx_8.S  vremu_vv_16.S  vremu_vv_32.S  vremu_vv_8.S  vremu_vx_16.S  vremu_vx_32.S  vremu_vx_8.S
test_sources/legacy/elem/: CMakeLists.txt
test_sources/legacy/f/: CMakeLists.txt
test_sources/legacy/kernel/: axpy.S  conv_3x3.S  gemm.S
test_sources/legacy/lsu/: vle8_vse32.S
test_sources/spike_cosim_support/: crt0.S  link.ld  riscv_test.h  test_macros.h
test_sources/vector_test_support/: crt0.S  link.ld  riscv_test.h  test_macros.h
